00-sample-apps/Golang-todo-postgresDB/k8s-manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: golang-todo-otel
  labels:
    app: golang-todo-otel
    app.kubernetes.io/component: golang-todo-otel
    app.kubernetes.io/instance: golang-todo-otel
    app.kubernetes.io/name: golang-todo-otel
    app.kubernetes.io/part-of: golang
    app.openshift.io/runtime: golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-todo-otel
  template:
    metadata:
      labels:
        app: golang-todo-otel
        deployment: golang-todo-otel
    spec:
      containers:
        - name: golang-todo-otel
          image: 'quay.io/mukeshs1306/golang-todo-otel:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
