00-sample-apps/Golang-todo-postgresDB/k8s-manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: golang-todo-otel
  labels:
    app: golang-todo-otel
    app.kubernetes.io/component: golang-todo-otel
    app.kubernetes.io/instance: golang-todo-otel
    app.kubernetes.io/name: golang-todo-otel
    app.kubernetes.io/part-of: golang
    app.openshift.io/runtime: golang
spec:
  # host: 
  subdomain: golang-todo-otel
  to:
    kind: Service
    name: golang-todo-otel
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
